fixes to button alignment, avatar vertical alignment, added standalone.js file to deliverables

--- a/src/css/components/buttons.scss
+++ b/src/css/components/buttons.scss
@@ -40,10 +40,9 @@
     opacity: 0.6;
     cursor: default;
   }
-  > .icon {
+  &:not(.icon--btn) > .icon {
     position: relative;
     top: -2px;
-    left: -4px;
   }
 }
 
